update icons mixins

--- a/src/components/accordion/accordion.less
+++ b/src/components/accordion/accordion.less
@@ -75,11 +75,11 @@
     }
 
     .is--open .accordion__header::after {
-        .mixin-icon-bg(@id: 'icon-003-s', @fillColor: @color-base-22);
+        .mixin-icon-chevron-up(@color: @color-base-22);
     }
 
     .is--closed .accordion__header::after {
-        .mixin-icon-bg(@id: 'icon-002-s', @fillColor: @color-base-22);
+        .mixin-icon-chevron-down(@color: @color-base-22);
     }
 
 }
