--- a/src/components/flipbuttons/flipbuttons.less
+++ b/src/components/flipbuttons/flipbuttons.less
@@ -52,7 +52,7 @@
     left: -2rem;
 
     &::after {
-        .mixin-icon-bg(@id: 'icon-008-s', @fillColor: @color-base-8);
+        .mixin-icon-chevron-left(@size: 32, @color: @color-base-8);
     }
 
 }
@@ -64,7 +64,7 @@
     right: -2rem;
 
     &::after {
-        .mixin-icon-bg(@id: 'icon-007-s', @fillColor: @color-base-8);
+        .mixin-icon-chevron-right(@size: 32, @color: @color-base-8);
     }
 
 }
