--- a/src/components/form/customselect.less
+++ b/src/components/form/customselect.less
@@ -61,7 +61,7 @@
 // ========
 
 .select__icon {
-    .mixin-icon-bg(@id: 'icon-002-s', @width: 24, @height: 24, @fillColor: @color-base-13);
+    .mixin-icon-chevron-down(@color: @color-base-13);
     border-left: @color-base-23 1px solid;
     height: 100%;
     pointer-events: none;
@@ -87,7 +87,7 @@
     }
 
     .select__icon {
-        .mixin-icon-bg(@id: 'icon-002-s', @width: 32, @height: 32, @fillColor: @color-base-13);
+        .mixin-icon-chevron-down(@size: 32, @color: @color-base-13);
         width: 4rem;
     }
 
