--- a/src/components/pagebtns/pagebtns.less
+++ b/src/components/pagebtns/pagebtns.less
@@ -57,11 +57,11 @@
 .pageButtons__buttonNext { right: 0; }
 
 .pageButtons__buttonPrev::after {
-    .mixin-icon-bg(@id: 'icon-008-s', @fillColor: @color-base-25);
+    .mixin-icon-chevron-left(@color: @color-base-25);
 }
 
 .pageButtons__buttonNext::after {
-    .mixin-icon-bg(@id: 'icon-007-s', @fillColor: @color-base-25);
+    .mixin-icon-chevron-right(@color: @color-base-25);
 }
 
 .pageButtons__indicator {
