--- a/src/components/pagerewind/pagerewind.less
+++ b/src/components/pagerewind/pagerewind.less
@@ -30,7 +30,7 @@
     // icon
 
     &::after {
-        .mixin-icon-bg(@id: 'icon-010-s', @fillColor: @color-base-8);
+        .mixin-icon-chevron-up(@size: 32, @color: @color-base-8);
         content: ' ';
         display: block;
         height: 100%;
