--- a/src/components/tabs/tabs.less
+++ b/src/components/tabs/tabs.less
@@ -176,7 +176,7 @@
 .tabs__menu--checkmarks {
 
     .tabs__item.is--active .tabs__link:before {
-        .mixin-icon-bg(@id: 'icon-011-s', @fillColor: @color-positive-15);
+        .mixin-icon-checkmark(@size: 32, @color: @color-positive-15);
         content: ' ';
         display: inline-block;
         height: 3.2rem;
