--- a/src/components/dock/dock.less
+++ b/src/components/dock/dock.less
@@ -51,7 +51,7 @@
     // icon
 
     &::before {
-        .mixin-icon-bg(@id: 'icon-007-s', @width: 24, @height: 24, @fillColor: @color-base-8);
+        .mixin-icon-chevron-left(@size: 32, @color: @color-base-8);
         left: -.2rem;
         right: auto;
     }
@@ -70,7 +70,7 @@
     // icon
 
     &::before {
-        .mixin-icon-bg(@id: 'icon-008-s', @width: 24, @height: 24, @fillColor: @color-base-8);
+        .mixin-icon-chevron-right(@size: 32, @color: @color-base-8);
         left: auto;
         right: -.2rem;
     }
