--- a/src/components/form/textinputs.less
+++ b/src/components/form/textinputs.less
@@ -32,14 +32,14 @@ textarea {
 
 input[type="search"] {
 
-    .mixin-icon-bg(@id: 'icon-012-s', @fillColor: @color-base-20);
-    background-position-x: -.4rem;
-    background-position-y: -.35rem;
+    .mixin-icon-spyglass(@color: @color-base-20);
+    background-position-x: .4rem;
+    background-position-y: .45rem;
     padding-left: 2.5rem;
 
     &:focus {
         background-position-x: -3rem;
-        background-position-y: -.35rem;
+        background-position-y: .45rem;
         padding-left: .5rem;
     }
 
@@ -47,7 +47,7 @@ input[type="search"] {
 
     &.input--rounded {
 
-        background-position-x: -.35rem;
+        background-position-x: .6rem;
         padding-left: 2.75rem;
 
         &:focus {
@@ -61,9 +61,9 @@ input[type="search"] {
 
     &.input--large {
 
-        .mixin-icon-bg(@id: 'icon-012', @fillColor: @color-base-20);
-        background-position-x: .25rem;
-        background-position-y: .25rem;
+        .mixin-icon-spyglass(@size: 32, @color: @color-base-20);
+        background-position-x: .9rem;
+        background-position-y: .95rem;
         padding-left: 4rem;
 
         &:focus {
@@ -77,7 +77,7 @@ input[type="search"] {
 
     &.input--large.input--rounded {
 
-        background-position-x: .6rem;
+        background-position-x: 1.1rem;
         padding-left: 4.5rem;
 
         &:focus {
