--- a/src/less/config/icons.less
+++ b/src/less/config/icons.less
@@ -1,22 +1,20 @@
 /** icons.less */
 
+.mixin-icon-arrow-down(@size: 24, @stroke: 2, @color: #000000) { background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='@{size}' height='@{size}' fill='none' stroke='@{color}' stroke-width='@{stroke}' viewBox='0 0 24 24' preserveAspectRatio='xMidYMid'><line x1='12' y1='5' x2='12' y2='19.5'/><polyline points='19,12.5 12,19.5 5,12.5'/></svg>") no-repeat center center; }
+.mixin-icon-arrow-left(@size: 24, @stroke: 2, @color: #000000) { background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='@{size}' height='@{size}' fill='none' stroke='@{color}' stroke-width='@{stroke}' viewBox='0 0 24 24' preserveAspectRatio='xMidYMid'><line x1='19' y1='12' x2='5' y2='12'></line><polyline points='12 19 5 12 12 5'></polyline></svg>") no-repeat center center; }
+.mixin-icon-arrow-right(@size: 24, @stroke: 2, @color: #000000) { background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='@{size}' height='@{size}' fill='none' stroke='@{color}' stroke-width='@{stroke}' viewBox='0 0 24 24' preserveAspectRatio='xMidYMid'><line x1='5' y1='12' x2='19' y2='12'></line><polyline points='12 5 19 12 12 19'></polyline></svg>") no-repeat center center; }
+.mixin-icon-arrow-up(@size: 24, @stroke: 2, @color: #000000) { background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='@{size}' height='@{size}' fill='none' stroke='@{color}' stroke-width='@{stroke}' viewBox='0 0 24 24' preserveAspectRatio='xMidYMid'><line x1='7' y1='17' x2='17' y2='7'></line><polyline points='7 7 17 7 17 17'></polyline></svg>") no-repeat center center; }
+.mixin-icon-checkmark(@size: 24, @stroke: 2, @color: #000000) { background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='@{size}' height='@{size}' fill='none' stroke='@{color}' stroke-width='@{stroke}' viewBox='0 0 24 24' preserveAspectRatio='xMidYMid'><polyline points='20 6 9 17 4 12'></polyline></svg>") no-repeat center center; }
 .mixin-icon-chevron-down(@size: 24, @stroke: 2, @color: #000000) { background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='@{size}' height='@{size}' fill='none' stroke='@{color}' stroke-width='@{stroke}' viewBox='0 0 24 24' preserveAspectRatio='xMidYMid'><polyline points='6 9 12 15 18 9'></polyline></svg>") no-repeat center center; }
+.mixin-icon-chevron-left(@size: 24, @stroke: 2, @color: #000000) { background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='@{size}' height='@{size}' fill='none' stroke='@{color}' stroke-width='@{stroke}' viewBox='0 0 24 24' preserveAspectRatio='xMidYMid'><polyline points='15 18 9 12 15 6'></polyline></svg>") no-repeat center center; }
+.mixin-icon-chevron-right(@size: 24, @stroke: 2, @color: #000000) { background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='@{size}' height='@{size}' fill='none' stroke='@{color}' stroke-width='@{stroke}' viewBox='0 0 24 24' preserveAspectRatio='xMidYMid'><polyline points='9 18 15 12 9 6'></polyline></svg>") no-repeat center center; }
 .mixin-icon-chevron-up(@size: 24, @stroke: 2, @color: #000000) { background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='@{size}' height='@{size}' fill='none' stroke='@{color}' stroke-width='@{stroke}' viewBox='0 0 24 24' preserveAspectRatio='xMidYMid'><polyline points='18 15 12 9 6 15'></polyline></svg>") no-repeat center center; }
 .mixin-icon-minus(@size: 24, @stroke: 2, @color: #000000) { background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='@{size}' height='@{size}' fill='none' stroke='@{color}' stroke-width='@{stroke}' viewBox='0 0 24 24' preserveAspectRatio='xMidYMid'><line x1='5' y1='12' x2='19' y2='12'></line></svg>") no-repeat center center; }
 .mixin-icon-plus(@size: 24, @stroke: 2, @color: #000000) { background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='@{size}' height='@{size}' fill='none' stroke='@{color}' stroke-width='@{stroke}' viewBox='0 0 24 24' preserveAspectRatio='xMidYMid'><line x1='12' y1='5' x2='12' y2='19'></line><line x1='5' y1='12' x2='19' y2='12'></line></svg>") no-repeat center center; }
+.mixin-icon-spyglass(@size: 24, @stroke: 2, @color: #000000) { background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='@{size}' height='@{size}' fill='none' stroke='@{color}' stroke-width='@{stroke}' viewBox='0 0 24 24' preserveAspectRatio='xMidYMid'><circle cx='11' cy='11' r='8'/><path d='M21 21l-4.35-4.35'/></svg>") no-repeat center center; }
 .mixin-icon-x(@size: 24, @stroke: 2, @color: #000000) { background: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='@{size}' height='@{size}' fill='none' stroke='@{color}' stroke-width='@{stroke}' viewBox='0 0 24 24' preserveAspectRatio='xMidYMid'><line x1='18' y1='6' x2='6' y2='18'/><line x1='6' y1='6' x2='18' y2='18'/></svg>") no-repeat center center; }
 
 /*
-    Add from Aristander:
-
-    .mixin-icon-arrow-down
-    .mixin-icon-arrow-left
-    .mixin-icon-arrow-right
-    .mixin-icon-arrow-up
-    .mixin-icon-checkmark
-    .mixin-icon-chevron-left
-    .mixin-icon-chevron-right
-
     Please notice
     =============
 
