--- a/src/components/form/customradiobutton.less
+++ b/src/components/form/customradiobutton.less
@@ -17,7 +17,6 @@
     overflow: hidden;
     padding: 0;
     position: relative;
-    position: relative;
     top: -.1rem;
     vertical-align: top;
     width: 1.6rem;
@@ -61,23 +60,23 @@
     // icon regular
 
     &::after {
-        .mixin-icon-bg(@id: 'icon-079-s', @width: 16, @height: 16, @fillColor: @color-base-8);
+        background: @color-base-8;
+        border-radius: 50%;
         content: ' ';
-        left: 0;
-        top: 0;
-        height: 1.4rem;
+        display: block;
+        height: 1rem;
+        left: 50%;
         position: absolute;
-        width: 1.4rem;
+        top: 50%;
+        transform: translate(-50%, -50%);
+        width: 1rem;
     }
 
     // icon large
 
     &.input--large::after {
-        .mixin-icon-bg(@id: 'icon-079', @width: 24, @height: 24, @fillColor: @color-base-8);
-        height: 2.8rem;
-        left: 0;
-        top: 0;
-        width: 2.8rem;
+        height: 1.4rem;
+        width: 1.4rem;
     }
 
 }
