--- a/src/components/pagedots/pagedots.less
+++ b/src/components/pagedots/pagedots.less
@@ -11,6 +11,7 @@
     font-size: 0;
     height: 1.5rem;
     margin: 0 auto;
+    position: relative;
     text-align: center;
     z-index: 20;
 }
@@ -50,16 +51,29 @@
 
 // dot icon
 
+.pageDots__dot::after,
+.pageDots__dot:hover::after,
+.pageDots__dot.is--active::after {
+    border-radius: 50%;
+    content: ' ';
+    display: block;
+    height: 1rem;
+    margin-left: .25rem;
+    position: absolute;
+    top: .25rem;
+    width: 1rem;
+}
+
 .pageDots__dot::after {
-    .mixin-icon-bg(@id: 'icon-079-s', @width: 24, @height: 24, @fillColor: @color-base-22);
+    background: @color-base-22;
 }
 
 .pageDots__dot:hover::after {
-    .mixin-icon-bg(@id: 'icon-079-s', @width: 24, @height: 24, @fillColor: @color-base-17);
+    background: @color-base-17;
 }
 
 .pageDots__dot.is--active::after {
-    .mixin-icon-bg(@id: 'icon-079-s', @width: 24, @height: 24, @fillColor: @color-primary-15);
+    background: @color-primary-15;
 }
 
 // arrow-left icon
@@ -108,15 +122,15 @@
     // dot icon
 
     .pageDots__dot::after {
-        .mixin-icon-bg(@id: 'icon-079-s', @width: 24, @height: 24, @fillColor: @color-base-12);
+        background: @color-base-12;
     }
 
     .pageDots__dot:hover::after {
-        .mixin-icon-bg(@id: 'icon-079-s', @width: 24, @height: 24, @fillColor: @color-base-18);
+        background: @color-base-18;
     }
 
     .pageDots__dot.is--active::after {
-        .mixin-icon-bg(@id: 'icon-079-s', @width: 24, @height: 24, @fillColor: @color-primary-23);
+        background: @color-primary-23;
     }
 
     // arrow-left icon
