replace SVG icons in markup
icon.md to do

--- a/docs/_includes/metamenu.html
+++ b/docs/_includes/metamenu.html
@@ -16,7 +16,7 @@
             {% endif %}
             <a href="#menu" class="button button--subtle m-l-2 l:hidden" yoi-action="ScrollTo:#menu;">
                 <span class="hidden">Menu</span>
-                <img class="icon" src="http://cdn.yoshino.digital/svg.php?id=icon-067-s" yoi-icon />
+                <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="none" stroke="#000000" stroke-width="2px" viewBox="0 0 24 24" preserveAspectRatio="xMidYMid"><path d="M0,5 L24,5 L24,7 L0,7 L0,5 Z M0,11 L24,11 L24,13 L0,13 L0,11 Z M0,17 L24,17 L24,19 L0,19 L0,17 Z"></path></svg>
             </a>
         {% endif %}
     </p>
