--- a/docs/_layouts/modal.html
+++ b/docs/_layouts/modal.html
@@ -12,7 +12,7 @@
         <script>document.body.className='js';</script>
         <div class="modalPage">
             <a class="button button--large button--subtle m-4" href="#link_back_to_previous_page">
-                <img class="icon" src="http://cdn.yoshino.digital/svg.php?id=icon-008-s" yoi-icon />
+                <svg class="icon" xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="none" stroke="#000000" stroke-width="2px" viewBox="0 0 24 24" preserveAspectRatio="xMidYMid"><polyline points="15 18 9 12 15 6"></polyline></svg>
                 <span>back</span>
             </a>
             <div class="p-4">
