--- a/src/components/icon/icon.less
+++ b/src/components/icon/icon.less
@@ -77,21 +77,36 @@
 
 [class*="--attention"] .icon,
 .icon.icon--attention.icon--attention {
-    circle, ellipse, path, polygon {
-        fill: @color-attention-8;
+    circle,
+    ellipse,
+    line,
+    path,
+    polygon,
+    polyline {
+        stroke: @color-attention-8;
     }
 }
 
 [class*="--positive"] .icon,
 .icon.icon--positive.icon--positive {
-    circle, ellipse, path, polygon {
-        fill: @color-positive-8;
+    circle,
+    ellipse,
+    line,
+    path,
+    polygon,
+    polyline {
+        stroke: @color-positive-8;
     }
 }
 
 [class*="--negative"] .icon,
 .icon.icon--negative.icon--negative {
-    circle, ellipse, path, polygon {
-        fill: @color-negative-8;
+    circle,
+    ellipse,
+    line,
+    path,
+    polygon,
+    polyline {
+        stroke: @color-negative-8;
     }
 }
