--- a/src/components/tabs/tabs.less
+++ b/src/components/tabs/tabs.less
@@ -1,5 +1,34 @@
 /** tabs.less */
 
+
+// @button-s-fontsize     : .88rem;
+// @button-s-height       : 1.5rem;
+// @button-s-paddingBase  : .5rem;
+// @button-s-lineheight   : ~'calc(@{button-s-height} - @{button-borderwidth} * 2)';
+// @button-s-xpadding     : ~'calc(@{button-s-paddingBase} - @{button-borderwidth})';
+// @button-s-xpull        : ~'calc((@{button-s-paddingBase} - @{button-borderwidth}) * -1)';
+
+// @button-fontsize       : 1rem;
+// @button-height         : 2rem;
+// @button-paddingBase    : .75rem;
+// @button-lineheight     : ~'calc(@{button-height} - @{button-borderwidth} * 2)';
+// @button-xpadding       : ~'calc(@{button-paddingBase} - @{button-borderwidth})';
+// @button-xpull          : ~'calc((@{button-paddingBase} - @{button-borderwidth}) * -1)';
+
+// @button-l-fontsize     : 1.13rem;
+// @button-l-height       : 2.5rem;
+// @button-l-paddingBase  : 1rem;
+// @button-l-lineheight   : ~'calc(@{button-l-height} - @{button-borderwidth} * 2)';
+// @button-l-xpadding     : ~'calc(@{button-l-paddingBase} - @{button-borderwidth})';
+// @button-l-xpull        : ~'calc((@{button-l-paddingBase} - @{button-borderwidth}) * -1)';
+
+// @button-xl-fontsize    : 1.25rem;
+// @button-xl-height      : 3rem;
+// @button-xl-paddingBase : 1.5rem;
+// @button-xl-lineheight  : ~'calc(@{button-xl-height} - @{button-borderwidth} * 2)';
+// @button-xl-xpadding    : ~'calc(@{button-xl-paddingBase} - @{button-borderwidth})';
+// @button-xl-xpull       : ~'calc((@{button-xl-paddingBase} - @{button-borderwidth}) * -1)';
+
 // block
 // =====
 
@@ -16,7 +45,7 @@
 
 .tabs__page {
     background: @color-white;
-    padding: 2rem;
+    padding: 1.5rem;
 }
 
 .tabs__menu {
@@ -25,29 +54,19 @@
     border: 0;
     border-bottom: @color-base-23 1px solid;
     color: @color-base-8;
-    display: table;
     position: relative;
-    table-layout: fixed;
     width: 100%;
 }
 
 .tabs__items {
-    list-style: none;
-    display: table-row;
+    display: flex;
+    width: 100%;
 }
 
-
 .tabs__item {
-
-    display: table-cell;
     border-right: @color-base-23 1px solid;
     position: relative;
-    vertical-align: bottom;
-
-    &:last-child {
-        border-right: 0;
-    }
-
+    list-style: none;
 }
 
 .tabs__item.is--active {
@@ -72,12 +91,13 @@
 
 .tabs__link {
 
+    .mixin-fs-2;
+    .mixin-fw-bold;
+    box-sizing: border-box;
     display: block;
-    font-family: @font-sansserif;
-    font-size: 1.3rem;
-    font-weight: bold;
-    line-height: 1.5rem;
-    padding: 1rem;
+    height: 2rem;
+    line-height: 1rem;
+    padding: .5rem .75rem;
     text-align: center;
 
     &:active,
@@ -91,22 +111,6 @@
         background-color: @color-white;
     }
 
-    // svg images inside tabs link
-
-    svg {
-
-        border: transparent 2px solid;
-        display: block;
-        height: 56px;
-        margin: 0 auto 5px auto;
-        width: 56px;
-
-        * {
-            fill: @color-base-10;
-        }
-
-    }
-
 }
 
 // modifiers
@@ -114,19 +118,14 @@
 
 // fixed layout: all tabs have the same width
 
-.tabs__menu--loose {
-
-    font-size: 0;
-
-    .tabs__items {
-        display: block;
-    }
-
+.tabs__menu--grow {
     .tabs__item {
-        border-right: @color-base-23 1px solid;
-        display: inline-block;
+        flex-grow: 1;
     }
 
+    .tabs__item:last-child {
+        border-right: 0;
+    }
 }
 
 // large tabs menu
@@ -134,8 +133,11 @@
 .tabs__menu--large {
 
     .tabs__link {
-        font-size: 1.5rem;
-        padding: 1.5rem 1rem;
+        .mixin-fs-3;
+        box-sizing: border-box;
+        height: 2.5rem;
+        line-height: 1.5rem;
+        padding: .5rem .75rem;
     }
 
 }
@@ -169,20 +171,11 @@
         color: @color-base-8;
     }
 
-}
-
-// checkmark for highlighting active tabs links
-
-.tabs__menu--checkmarks {
-
-    .tabs__item.is--active .tabs__link:before {
-        .mixin-icon-bg(@id: 'icon-011-s', @fillColor: @color-positive-15);
-        content: ' ';
-        display: inline-block;
-        height: 3.2rem;
-        margin: -1.5rem 0;
-        vertical-align: middle;
-        width: 3.2rem;
+    .is--active .tabs__link {
+        padding-left: ~'calc(.75rem - 1px)';
+        padding-right: ~'calc(.75rem - 1px)';
+        position: relative;
+        top: -1px;
     }
 
 }
@@ -207,13 +200,7 @@
     }
 
     .tabs__link {
-
         color: @color-base-13;
-
-        circle, ellipse, path, polygon {
-            fill: @color-base-13;
-        }
-
     }
 
     .tabs__item.is--active,
@@ -225,24 +212,22 @@
         .tabs__link {
             color: @color-base-8;
         }
-
-        circle, ellipse, path, polygon {
-            fill: @color-base-8;
-        }
-
     }
 
     .tabs__item.is--active::after {
+
+        // pointer
+
         background: transparent;
         border-color: transparent transparent @color-base-10 transparent;
         border-style: solid;
-        border-width: 0 1rem 1rem 1rem;
-        bottom: -1rem;
+        border-width: 0 .5rem .5rem .5rem;
+        bottom: -.5rem;
         content: ' ';
         display: block;
         height: 0;
         left: 50%;
-        margin-left: -1rem;
+        margin-left: -.5rem;
         position: absolute;
         transform: rotate(180deg);
         width: 0;
