--- a/src/components/form/customcheckbox.less
+++ b/src/components/form/customcheckbox.less
@@ -1,87 +1,87 @@
-// /** customcheckbox.less */
+/** customcheckbox.less */
 
-// // block
-// // =====
+// block
+// =====
 
-// .checkbox {
+.checkbox {
 
-//     .mixin-defaultBorderRadius;
-//     background: @color-white;
-//     border: @color-base-20 1px solid;
-//     box-shadow: 0 1px 0 @color-base-24 inset;
-//     box-sizing: border-box;
-//     cursor: pointer;
-//     display: inline-block;
-//     height: 1.5rem;
-//     margin: 0 .5rem 0 0;
-//     overflow: hidden;
-//     padding: 0;
-//     position: relative;
-//     vertical-align: top;
-//     width: 1.5rem;
+    .mixin-defaultBorderRadius;
+    background: @color-white;
+    border: @color-base-20 1px solid;
+    box-shadow: 0 1px 0 @color-base-24 inset;
+    box-sizing: border-box;
+    cursor: pointer;
+    display: inline-block;
+    height: 1.5rem;
+    margin: 0 .5rem 0 0;
+    overflow: hidden;
+    padding: 0;
+    position: relative;
+    vertical-align: top;
+    width: 1.5rem;
 
-//     // inner input element
+    // inner input element
 
-//     input {
-//         left: -5rem;
-//         opacity: 0;
-//         position: absolute;
-//     }
+    input {
+        left: -5rem;
+        opacity: 0;
+        position: absolute;
+    }
 
-// }
+}
 
-// // modifiers
-// // =========
+// modifiers
+// =========
 
-// // size
+// size
 
-// .checkbox.input--large {
-//     height: 3rem;
-//     width: 3rem;
-// }
+.checkbox.input--large {
+    height: 3rem;
+    width: 3rem;
+}
 
-// // validation
+// validation
 
-// .checkbox.input--negative {
-//     border-color: @color-negative-15;
-//     color: @color-negative-8;
-// }
+.checkbox.input--negative {
+    border-color: @color-negative-15;
+    color: @color-negative-8;
+}
 
-// .checkbox.input--positive {
-//     border-color: @color-positive-15;
-//     color: @color-positive-8;
-// }
+.checkbox.input--positive {
+    border-color: @color-positive-15;
+    color: @color-positive-8;
+}
 
-// // interactive states
+// interactive states
 
-// .checkbox.input--checked {
+.checkbox.input--checked {
 
-//     // icon regular
+    // icon regular
 
-//     &::after {
-//         .mixin-icon-bg(@id: 'icon-011-s', @width: 21, @height: 21, @fillColor: @color-base-8);
-//         content: ' ';
-//         left: 0;
-//         top: 0;
-//         height: 1.3rem;
-//         position: absolute;
-//         width: 1.3rem;
-//     }
+    &::after {
+        .mixin-icon-bg(@id: 'icon-011-s', @width: 21, @height: 21, @fillColor: @color-base-8);
+        content: ' ';
+        left: 0;
+        top: 0;
+        height: 1.3rem;
+        position: absolute;
+        width: 1.3rem;
+    }
 
-//     // icon large
+    // icon large
 
-//     &.input--large::after {
-//         .mixin-icon-bg(@id: 'icon-011', @width: 21, @height: 21, @fillColor: @color-base-8);
-//         width: 2.8rem;
-//         height: 2.8rem;
-//     }
+    &.input--large::after {
+        .mixin-icon-bg(@id: 'icon-011', @width: 21, @height: 21, @fillColor: @color-base-8);
+        width: 2.8rem;
+        height: 2.8rem;
+    }
 
-// }
+}
 
-// .checkbox.input--focus {
-//     .mixin-defaultFocus;
-// }
+.checkbox.input--focus {
+    .mixin-defaultFocus;
+}
 
-// .checkbox.input--disabled {
-//     .mixin-disabled;
-// }
+.checkbox.input--disabled {
+    .mixin-disabled;
+}
