small tweaks after merging

--- a/src/components/searchinput/searchinput.less
+++ b/src/components/searchinput/searchinput.less
@@ -14,8 +14,8 @@
     input {
         &:extend(.input);
 
-        .mixin-icon-bg(@id: 'icon-012-s', @fillColor: @color-base-20);
-        background-position-x: -.4rem;
+        .mixin-icon-spyglass(@color: @color-base-20);
+        background-position-x: .25rem;
         padding-left: 2.25rem;
 
         &:focus {
@@ -38,6 +38,7 @@
 .searchInput--rounded {
     input {
         border-radius: 1.25rem;
+        background-position-x: .25rem;
         padding-left: 2.5rem;
     
         &:focus {
@@ -51,9 +52,8 @@
 
 .searchInput--small {
     input {
-        .mixin-icon-bg(@id: 'icon-012-s', @fillColor: @color-base-20);
-        background-position-x: -.4rem;
-        background-size: 2.5rem;
+        .mixin-icon-spyglass(@size: 16, @color: @color-base-20);
+        background-position-x: .25rem;
         font-size: .88rem;
         height: 1.5rem;
         line-height: 1.5rem;
@@ -70,10 +70,8 @@
 
 .searchInput--large {
     input {
-        .mixin-icon-bg(@id: 'icon-012', @fillColor: @color-base-20);
-        background-position-x: .15rem;
-        background-position-y: .15rem;
-        background-size: 2rem;
+        .mixin-icon-spyglass(@size: 32, @color: @color-base-20);
+        background-position-x: .25rem;
         font-size: 1.13rem;
         height: 2.5rem;
         line-height: 2.5rem;
