--- a/src/components/select/select.less
+++ b/src/components/select/select.less
@@ -62,7 +62,7 @@
 // ========
 
 .select__icon {
-    .mixin-icon-bg(@id: 'icon-002-s', @width: 24, @height: 24, @fillColor: @color-base-13);
+    .mixin-icon-chevron-down(@color: @color-base-13);
     border-left: @color-base-23 1px solid;
     height: 100%;
     pointer-events: none;
@@ -88,10 +88,9 @@
     }
 
     .select__icon {
-        .mixin-icon-bg(@id: 'icon-002-s', @width: 16, @height: 16, @fillColor: @color-base-13);
+        .mixin-icon-chevron-down(@size: 16, @color: @color-base-13);
         width: 1.5rem;
     }
-
 }
 
 .select--large {
@@ -105,7 +104,7 @@
     }
 
     .select__icon {
-        .mixin-icon-bg(@id: 'icon-002-s', @width: 32, @height: 32, @fillColor: @color-base-13);
+        .mixin-icon-chevron-down(@size: 32, @color: @color-base-13);
         width: 2.5rem;
     }
 
