--- a/src/components/button/buttonoutline.less
+++ b/src/components/button/buttonoutline.less
@@ -13,7 +13,7 @@
 @button-outline-xpadding       : ~'calc(@{button-paddingBase} - @{button-outline-borderwidth})';
 @button-outline-xpull          : ~'calc((@{button-paddingBase} - @{button-outline-borderwidth}) * -1)';
 
-@button-outline-l-lineheight   : ~'calc(@{button-l-height} - @{button-outline-borderwidth}} * 2)';
+@button-outline-l-lineheight   : ~'calc(@{button-l-height} - @{button-outline-borderwidth} * 2)';
 @button-outline-l-xpadding     : ~'calc(@{button-l-paddingBase} - @{button-outline-borderwidth})';
 @button-outline-l-xpull        : ~'calc((@{button-l-paddingBase} - @{button-outline-borderwidth}) * -1)';
 
