--- a/src/components/stepcrumb/stepcrumb.less
+++ b/src/components/stepcrumb/stepcrumb.less
@@ -14,14 +14,14 @@
     position: relative;
     white-space: nowrap;
 
-    // line
+    // connecting bottom line
 
     &::after {
         background: @color-base-23;
-        bottom: -.5rem;
+        bottom: 0;
         content: ' ';
         display: block;
-        height: .2rem;
+        height: 2px;
         left: 2rem;
         position: absolute;
         right: 2rem;
@@ -36,9 +36,9 @@
 
 .stepCrumb__item {
 
+    .mixin-fs-2;
     color: @color-base-8;
     display: inline-block;
-    font-size: 1.3rem;
     height: 4rem;
     line-height: 4rem;
     position: relative;
@@ -55,12 +55,12 @@
         counter-increment: i;
         display: inline-block;
         font-weight: bold;
-        height: 3rem;
-        left: .5rem;
-        line-height: 3rem;
+        height: 2rem;
+        left: 1rem;
+        line-height: 2rem;
         position: absolute;
-        top: .5rem;
-        width: 3rem;
+        top: 1rem;
+        width: 2rem;
         z-index: 2;
     }
 
@@ -68,18 +68,18 @@
 
     &::before {
         background: @color-base-23;
-        bottom: -.5rem;
+        bottom: 0;
         content: ' ';
         display: block;
-        height: 1.5rem;
-        left: 1.9rem;
+        height: 1rem;
+        left: ~'calc(2rem - 1px)';
         position: absolute;
-        width: .2rem;
+        width: 2px;
         z-index: 1;
     }
-    
+
     // mouseover
-    
+
     &:hover::after {
         background: @color-base-22;
     }
@@ -101,11 +101,11 @@
 // label
 
 .stepCrumb__label {
+    .mixin-fs-2;
     color: @color-primary-8;
     display: none;
     padding: 0 0 0 1rem;
     text-decoration: none;
-    font-size: 1.5rem;
 }
 
 // last step label
@@ -141,19 +141,19 @@
         background: @color-primary-10;
         color: @color-primary-24;
     }
-    
+
     &:hover::after {
         background: @color-primary-8;
     }
-    
+
     // show the label, only on current step
-    
+
     .stepCrumb__label {
         display: inline;
     }
-    
+
     // adjust positioning
-    
+
     .stepCrumb__link {
         display: inline-block;
         height: auto;
