--- a/src/components/spinner/spinner.less
+++ b/src/components/spinner/spinner.less
@@ -1,26 +1,26 @@
 /** spinner.less */
 
 .spinner::after {
-    animation: spin 1s infinite linear;
+    animation: spin .75s infinite linear;
     background: transparent;
     border-radius: 50%;
-    border: 3px solid @color-gray-24;
+    border: 2px solid @color-gray-24;
     border-top-color: @color-primary-19;
     box-sizing: border-box;
     content: ' ';
     display: inline-block;
-    height: 3rem;
+    height: 1.5rem;
     left: 50%;
-    margin-left: -1.5rem;
-    margin-top: -1.5rem;
+    margin-left: -.75rem;
+    margin-top: -.75rem;
     position: absolute;
     top: 50%;
-    width: 3rem;
+    width: 1.5rem;
 }
 
 .spinner--dark::after {
     border-color: fade(@color-gray-10,70%);
-    border-top-color: @color-primary-19;
+    border-top-color: @color-primary-20;
 }
 
 // animation
