update component "slider"

--- a/src/components/slider/slider.less
+++ b/src/components/slider/slider.less
@@ -10,7 +10,7 @@
     padding: 0;
     position: relative;
     text-align: center;
-    
+
     &:focus {
         box-shadow: none;
     }
@@ -63,17 +63,17 @@
 
 .slider__caption {
 
+    .mixin-fs-2;
     border-top: @color-base-23 1px solid;
-    font-size: 1.5rem;
     margin: 0;
     padding: 1rem;
 
     h1, h2, h3, h4, h5, h6 {
+        .mixin-fs-2;
         margin: 0;
     }
 
     p {
-        font-family: @font-sansserif;
         margin: 0;
     }
 
