update coponent "quotaton"

--- a/src/components/quotation/quotation.less
+++ b/src/components/quotation/quotation.less
@@ -5,30 +5,15 @@
     .mixin-fs-2;
     display: block;
     font-style: italic;
-    padding: 2rem 2rem 2rem 7rem;
+    padding: 2rem;
     position: relative;
     border-left: @color-gray-23 2px solid;
 
     p {
         margin: 0;
     }
-    
+
     p + p {
         margin-top: 1.5rem;
     }
-
-    &:after {
-        color: @color-base-22;
-        content: '”';
-        display: block;
-        font-size: 10rem;
-        font-style: normal;
-        height: 5rem;
-        left: 1.75rem;
-        line-height: 8.5rem;
-        position: absolute;
-        top: 1.5rem;
-        width: 5rem;
-    }
-
 }
